# nexusmig

./: .gitignore  Nexus_SF_Migration_Accelerator_PRD.docx  migration.yaml  pyproject.toml
application/commands/: export_quarantine.py  generate_diff_report.py  generate_report.py  run_migration.py
application/dtos/: migration_dto.py
application/orchestration/: migration_workflow.py
application/queries/: migration_status.py
domain/entities/: account.py  activity.py  contact.py  opportunity.py
domain/events/: event_base.py  migration_events.py
domain/ports/: event_bus_ports.py  extractor_ports.py  loader_ports.py  progress_ports.py
domain/services/: diff_service.py  mapping_service.py  relationship_resolver.py  remediation_service.py  transform_service.py
domain/value_objects/: errors.py  field_mapping.py  migration_result.py  salesforce_id.py
infrastructure/config/: dependency_injection.py  yaml_config.py
infrastructure/extractors/: csv_extractor.py  salesforce_api_extractor.py
infrastructure/loaders/: file_exporter.py  nexus_api_loader.py
infrastructure/logging/: log_reader.py  migration_logger.py  run_history.py
infrastructure/mcp_servers/: migration_server.py  server_config.json
presentation/cli/: migrate.py
presentation/web/: app.py
tests/application/: test_export_quarantine.py  test_generate_diff_report.py  test_generate_report.py  test_migration_workflow.py  test_progress.py
tests/domain/: test_diff_service.py  test_entities.py  test_mapping_service.py  test_relationship_resolver.py  test_remediation_service.py  test_value_objects.py  (+1 more)
(+10 files in other folders)
